Change if expression

--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -187,9 +187,15 @@ jobs:
         run: $backup_command -i $inventory -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
 
       - name: Start Ansible Backup On First Standby (If Exists) If Primary Backup Failed
-        if: job.steps.backup.status == failure() && ${env.RmanTarget} ~= .*primarydb && -e ${env.inventory}/group_vars/${RmanTarget/primarydb/standbydb1}.yml
+        if: ${{ job.steps.backup.status == failure() && contains(env.RmanTarget,'primarydb') }}
         shell: bash
-        run: $backup_command -i $inventory -e rman_target=${RmanTarget/primarydb/standbydb1} -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
+        run: |
+          if [[ -e ${inventory}/group_vars/${RmanTarget/primarydb/standbydb1}.yml ]]
+          then
+            $backup_command -i $inventory -e rman_target=${RmanTarget/primarydb/standbydb1} -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
+          else
+            echo "Standby Not Configured"
+          fi
 
       - name: Start Ansible Validate And Fix Absent Chunks
         run: $validate_command -i $inventory -e rman_target=$RmanTarget -e fix_absent_chunks=$FixAbsentChunks $VerboseOutput
