--- a/.github/workflows/oracle-db-build-ha.yml
+++ b/.github/workflows/oracle-db-build-ha.yml
@@ -151,7 +151,7 @@ jobs:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: roles/oracle-secure-backup
-          path: operation_roles
+          path: operations
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
