--- a/.github/workflows/oracle-db-build-ha.yml
+++ b/.github/workflows/oracle-db-build-ha.yml
@@ -101,6 +101,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
             ansible/roles/oracle-secure-backup
+            ansible/roles/get-ec2-facts
           path: inventory
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
@@ -164,7 +165,8 @@ jobs:
       - name: Build High Availability Standby 1 Database
         if: ${{ steps.standbydbsconfigured.outputs.standbydb1Host != '' }}
         run: |
-          mv inventory/ansible/roles/oracle-secure-backup operations/playbooks
+          mkdir -p .ansible/roles
+          mv inventory/ansible/roles/* .ansible/roles
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
           -e primary=${{ steps.prepareinventorynames.outputs.primaryHost }} \
