--- a/.github/workflows/oracle-db-build-ha.yml
+++ b/.github/workflows/oracle-db-build-ha.yml
@@ -165,8 +165,8 @@ jobs:
       - name: Build High Availability Standby 1 Database
         if: ${{ steps.standbydbsconfigured.outputs.standbydb1Host != '' }}
         run: |
-          mkdir -p .ansible/roles
-          mv inventory/ansible/roles/* .ansible/roles
+          mkdir -p ~/.ansible/roles
+          mv inventory/ansible/roles/* ~/.ansible/roles
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
           -e primary=${{ steps.prepareinventorynames.outputs.primaryHost }} \
