--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -187,7 +187,7 @@ jobs:
         run: $backup_command -i $inventory -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
 
       - name: Start Ansible Backup On First Standby (If Exists) If Primary Backup Failed
-        if: ${{ job.steps.backup.status == failure() && contains(env.RmanTarget,'primarydb') }}
+        if: ${{ steps.backup.outcome == 'failure' && contains(env.RmanTarget,'primarydb') }}
         shell: bash
         run: |
           if [[ -e ${inventory}/group_vars/${RmanTarget/primarydb/standbydb1}.yml ]]
