Temporarily add push event

--- a/.github/workflows/oracle-db-dms-setup.yml
+++ b/.github/workflows/oracle-db-dms-setup.yml
@@ -1,6 +1,9 @@
 name: "Oracle: DMS Setup"
 run-name: "Oracle: ${{ format('{0}-{1}', github.event.inputs.TargetEnvironment, github.event.inputs.TargetHost) }}-dms"
 on:
+  push:
+    branches:
+      - DBA-565
   workflow_dispatch:
     inputs:
       TargetEnvironment:
