--- a/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-user.yml
+++ b/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-user.yml
@@ -2,7 +2,7 @@
   include_vars: "{{ dms_user_application }}.yml"
 
 - name: Get {{ dms_user }} password from ssm
-  shell: . /etc/environment && aws ssm get-parameters --region ${REGION} --with-decryption --name /${HMPPS_ENVIRONMENT}/${APPLICATION}/delius-database/db/{{ dms_user }}_password | jq -r '.Parameters[].Value'
+  shell: aws ssm get-parameters --region {{ region }} --with-decryption --name /{{ environment_name }}/{{ project_name }}/delius-database/db/{{ dms_user }}_password | jq -r '.Parameters[].Value'
   changed_when: false
   register: "dms_password"
   #no_log: true
