--- a/playbooks/oracle_dms_setup/dms_setup/tasks/main.yml
+++ b/playbooks/oracle_dms_setup/dms_setup/tasks/main.yml
@@ -11,6 +11,11 @@
       dms_user_applications: "{{ ( [] if ( include_analytics_platform | default('yes') == 'no') else ['delius_analytics_platform'] ) +
                                  ( [] if ( include_audited_interaction | default('yes') == 'no') else ['delius_audited_interaction'] ) }}"
 
+- name: Change read host name if not ending with primarydb
+  set_fact:
+    delius_primarydb: "{{ read_host | replace (read_host.split('_')[-1], 'primarydb') }}"
+  when: read_host is not search ('primarydb')
+
 - block:
 
     # If we are reading from a standby database then ADG must be enabled
