--- a/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-dblink.yml
+++ b/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-dblink.yml
@@ -22,8 +22,8 @@
 
       SELECT 'TRIGGER_NAME='||trigger_name
       FROM   dba_triggers
-      WHERE  trigger_name = '{{ dms_user }}_RESTRICT'
-      AND    owner = '{{ user_support_user }}';
+      WHERE  trigger_name = '{{ dms_user | upper }}_RESTRICT'
+      AND    owner = '{{ user_support_user | upper }}';
   
       EOF
   delegate_to: "{{ delius_primary_host }}"
@@ -40,12 +40,12 @@
       WHENEVER SQLERROR EXIT FAILURE
       SET ECHO OFF HEAD OFF PAGES 0 FEED OFF SERVEROUTPUT ON
 
-      DROP TRIGGER {{ dms_user }}_RESTRICT;
+      DROP TRIGGER {{ user_support_user }}.{{ dms_user }}_RESTRICT;
   
       EOF
   delegate_to: "{{ delius_primary_host }}"
   register: drop_logon_trigger
-  when: get_logon_trigger.stdout is search('.*DB_LINK={{ dms_user }}_RESTRICT.*')
+  when: get_logon_trigger.stdout is search((dms_user | upper) + '_RESTRICT')
 
 - name: Check Existence of Database Link to the Primary Database
   shell: 
