--- a/playbooks/oracle_dms_setup/dms_setup/vars/delius_audited_interaction.yml
+++ b/playbooks/oracle_dms_setup/dms_setup/vars/delius_audited_interaction.yml
@@ -1,5 +1,5 @@
-delius_primary_host: "{{ hostvars[groups['delius_primarydb'][0]]['inventory_hostname'] }}"
-delius_primary_sid: "{{ hostvars[groups['delius_primarydb'][0]]['database_primary_sid'] }}"
+delius_primary_host: "{{ hostvars[groups[delius_primarydb][0]]['inventory_hostname'] }}"
+delius_primary_sid: "{{ hostvars[groups[delius_primarydb][0]]['database_primary_sid'] }}"
 dms_user: "delius_audit_dms_pool"
 user_support_user: "delius_user_support"
 # Audited Interaction Preservation may use the Standby for Reading Audit Data is available
