--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,8 @@
 # Add a team or username to this file
 # Example:
 # *   @ministryofjustice/operations-engineering
-.github/* @ministryofjustice/hmpps-migration
 .github/workflows/oracle-* @ministryofjustice/hmpps-dba
+.github/** @ministryofjustice/hmpps-migration
 playbooks/** @ministryofjustice/hmpps-dba
-* @ministryofjustice/hmpps-migration
+docker/** @ministryofjustice/hmpps-migration
+ansible/** @ministryofjustice/hmpps-migration
