Another spelling correction

--- a/playbooks/oracle_support_awr_reports/awr_reports_setup/tasks/main.yml
+++ b/playbooks/oracle_support_awr_reports/awr_reports_setup/tasks/main.yml
@@ -67,4 +67,4 @@
         TOPOLOGY_NAME: "{{ topology_name }}" 
         ADG_NODE: "{{ adg_node }}"   
   
-  when: primary_database_sid is defined
+  when: database_primary_sid is defined
