--- a/.github/workflows/oracle-db-build-ha.yml
+++ b/.github/workflows/oracle-db-build-ha.yml
@@ -159,18 +159,18 @@ jobs:
           fsfo_mode=$(yq '.fsfo_mode' group_vars/${{ steps.prepareinventorynames.outputs.primaryHost }}.yml)
           [ "$fsfo_mode" == "null" ] && echo 'fsfo_mode="disabled"' >> $GITHUB_OUTPUT || echo "fsfo_mode=$fsfo_mode" >> $GITHUB_OUTPUT
 
-      # - name: Build High Availability Standby 1 Database
-      #   if: ${{ steps.standbydbsconfigured.outputs.standbydb1Host != '' }}
-      #   run: |
-      #     export ANSIBLE_CONFIG=$ansible_config
-      #     $command -i $inventory \
-      #     -e primary=${{ steps.prepareinventorynames.outputs.primaryHost }} \
-      #     -e standby=${{ steps.standbydbsconfigured.outputs.standbydb1Host }} \
-      #     -e method=${{ github.event.inputs.Procedure }} \
-      #     -e high_availability_count=${{ steps.standbydbsconfigured.outputs.high_availability_count }} \
-      #     -e fsfo_mode=${{ steps.getfsfomode.outputs.fsfo_mode }} \
-      #     -e standby_number=1 \
-      #     -e primary_source_type=${{ github.event.inputs.PrimarySourceType }}
+      - name: Build High Availability Standby 1 Database
+        if: ${{ steps.standbydbsconfigured.outputs.standbydb1Host != '' }}
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          $command -i $inventory \
+          -e primary=${{ steps.prepareinventorynames.outputs.primaryHost }} \
+          -e standby=${{ steps.standbydbsconfigured.outputs.standbydb1Host }} \
+          -e method=${{ github.event.inputs.Procedure }} \
+          -e high_availability_count=${{ steps.standbydbsconfigured.outputs.high_availability_count }} \
+          -e fsfo_mode=${{ steps.getfsfomode.outputs.fsfo_mode }} \
+          -e standby_number=1 \
+          -e primary_source_type=${{ github.event.inputs.PrimarySourceType }}
 
       - name: Build High Availability Standby 2 Database
         if: ${{ steps.standbydbsconfigured.outputs.standbydb2Host != '' }}
