Correct ssm parameter path

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/generate_asm_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/generate_asm_password.yml
@@ -8,7 +8,7 @@
 # Allow retries in case of password change storm
 - name: Record New ASM Password in Parameter Store
   community.aws.aws_ssm_parameter_store:
-    name: "/{{ environment_name }}/{{ application }}/db/oradb_asmsnmp_password"
+    name: "/{{ environment_name }}/{{ project_name }}/{{ application }}/db/oradb_asmsnmp_password"
     value: "{{ new_password }}"
     overwrite_value: changed
     string_type: "SecureString"
