--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/main.yml
@@ -75,6 +75,20 @@
   set_fact:
     application: "{{ database_type + '-database' }}"
 
+- name: Build Secret Name From EC2 Tags
+  shell: |
+    export PATH=$PATH:/usr/local/bin
+    INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
+    ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=environment-name"  --query "Tags[].Value" --output text)
+    DELIUS_ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=delius-environment-name"  --query "Tags[].Value" --output text)
+    APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text | sed 's/-core//')
+    echo ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT_NAME}-${APPLICATION}-dba-passwords
+  register: build_secret_name
+
+- name: Set Secret Manager Name
+  set_fact:
+    secret_name: "{{ build_secret_name.stdout }}"
+
 #  The rest of this play is in a block so we can re-enable monitoring even if it fails
 - name: Rotate Passwords
   block:
@@ -141,7 +155,7 @@
     # for rotating the password in the Alfresco or Audit wallets.
     - name: Remember Existing SYSTEM Password
       set_fact:
-        original_system_password: "{{ lookup('aws_ssm', '/{{ environment_name }}/{{ project_name }}/{{ application }}/db/oradb_system_password',region=region ) }}"
+        original_system_password: "{{ lookup('aws_secret', '{{ secret_name }}.system',region=region,nested=true) }}"
       when:
         - database_type == 'delius'
 
