--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_application_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_application_passwords.yml
@@ -22,19 +22,8 @@
 
 - block:
     # There is a potential for this task to fail due to AWS throttling, so allow it to retry a few times if needed
-    - name: Record New Database Password for {{ db_username }} in Parameter Store
-      community.aws.aws_ssm_parameter_store:
-        name: "/{{ environment_name }}/{{ project_name }}/{{ application }}/db/{{ db_username }}_password"
-        value: "{{ new_password }}"
-        overwrite_value: changed
-        string_type: "SecureString"
-        region: "{{ region }}"
-      register: record_db_password
-      retries: 10
-      delay: "{{ 60 | random }}"
-      until: record_db_password is not failed
-      vars:
-        ansible_aws_ssm_timeout: 60
+    - name: Record New Database Password for {{ db_username }} in Secret Manager
+      include_tasks: record_secret_password.yml
 
     # We only need to change the password in the primary database
     - name: Set Password for {{ db_username }} in Database
@@ -42,9 +31,7 @@
       register: set_db_password
       environment:
         DB_USERNAME: "{{ db_username }}"
-        DB_PASSWORD: "{{ new_password }}"
-        LOGIN_USER: ""
-        LOGIN_PWD: ""
+        SECRET_NAME: "{{ secret_name }}"
       vars:
         ansible_aws_ssm_timeout: 60
 
