--- a/.github/workflows/oracle-db-set-parameters.yml
+++ b/.github/workflows/oracle-db-set-parameters.yml
@@ -112,4 +112,6 @@ jobs:
       - name: Start Set Parameters
         run: | 
             export ANSIBLE_CONFIG=$ansible_config
+            echo $ansible_config
+            cat $ansible_config
             $command -i $inventory -e target_host=${{needs.build_target_name.outputs.TargetHost}}
